tests/negative/scope/class-reuses-type-parameter-name/err.expected
ERROR:
The type parameter `#A` is defined for a second time at test.smol:3:15-3:17:
         2 | 
         3 | class Foo[#A, #A] {}
           |               ^^
         4 | 

The first definition was at test.smol:3:11-3:13:
         2 | 
         3 | class Foo[#A, #A] {}
           |           ^^
         4 | 
